# gazebo_package_factory

./: CMakeLists.txt  README.md  package.xml
scripts/: generate_gazebo_package
